--- a/data/equipment/consumable-06-AgBIZtwciSsCZeNN.htm
+++ b/data/equipment/consumable-06-AgBIZtwciSsCZeNN.htm
@@ -9,5 +9,5 @@ Nom:
 <p>The aura deals 2d4 fire damage.</p>
 ------ Description (fr) ------
 <p><strong>Activate</strong>  <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span>  Interact</p> 
-<p>Pendant 1 minute après avoir bu une potion de représailles de feu, vous rayonnez d'une faible aura d'énergie de feu, et une créature qui vous touche (par exemple en effectuant une attaque à mains nues ou en utilisant un sort à portée de toucher contre vous) ou qui est adjacente à vous et vous frappe avec une arme de mêlée subit des dégâts de feu.</p> 
+<p>Pendant 1 minute après avoir bu une potion de Riposte de feu, vous rayonnez d'une faible aura d'énergie de feu, et une créature qui vous touche (par exemple en effectuant une attaque à mains nues ou en utilisant un sort à portée de toucher contre vous) ou qui est adjacente à vous et vous frappe avec une arme de mêlée subit des dégâts de feu.</p> 
 <p>L'aura inflige 2d4 points de dégâts de feu.</p>
