--- a/data/equipment/consumable-01-ugIxgGIkJh2aXE2N.htm
+++ b/data/equipment/consumable-01-ugIxgGIkJh2aXE2N.htm
@@ -7,6 +7,6 @@ Nom: Potion de Riposte de feu (mineure)
 <p>For 1 minute after drinking a potion of fire retaliation, you glow with a faint aura of fire energy, and a creature that touches you (such as by making an unarmed attack or using a spell with a range of touch against you) takes fire damage.</p>
 <p>The aura deals 1 fire damage.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span class="pf2-icon">1</span> Interagir</p>
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
 <p>Pendant 1 minute après avoir bu une potion de Riposte de feu, vous brillez d'une faible aura d'énergie de feu, et une créature qui vous touche (par exemple en effectuant une attaque à mains nues ou en utilisant un sort de contact) subit des dégâts de feu.</p>
 <p>L'aura inflige 1 dégât de feu.</p>
