--- a/data/equipment/consumable-06-AgBIZtwciSsCZeNN.htm
+++ b/data/equipment/consumable-06-AgBIZtwciSsCZeNN.htm
@@ -7,6 +7,6 @@ Nom: Potion de Riposte de feu
 <p>For 1 minute after drinking a potion of fire retaliation, you glow with a faint aura of fire energy, and a creature that touches you (such as by making an unarmed attack or using a spell with a range of touch against you) or is adjacent to you and hits you with a melee weapon strike takes fire damage.</p>
 <p>The aura deals 2d4 fire damage.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong>  <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span>  Interact</p> 
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
 <p>Pendant 1 minute après avoir bu une potion de Riposte de feu, vous rayonnez d'une faible aura d'énergie de feu, et une créature qui vous touche (par exemple en effectuant une attaque à mains nues ou en utilisant un sort de contact) ou qui est adjacente à vous et vous frappe avec une arme de mêlée subit des dégâts de feu.</p> 
 <p>L'aura inflige 2d4 points de dégâts de feu.</p>
