--- a/data/equipment/consumable-06-AgBIZtwciSsCZeNN.htm
+++ b/data/equipment/consumable-06-AgBIZtwciSsCZeNN.htm
@@ -1,5 +1,5 @@
 Name: Potion of Fire Retaliation (Moderate)
-Nom: Potion de Riposte de feu
+Nom: Potion de Riposte de feu (modérée)
 État: libre
 
 ------ Description (en) ------
