--- a/data/equipment/consumable-18-TalLb1YlvXzutuPc.htm
+++ b/data/equipment/consumable-18-TalLb1YlvXzutuPc.htm
@@ -1,5 +1,5 @@
 Name: Potion of Fire Retaliation (Major)
-Nom: Potion de Riposte de feu
+Nom: Potion de Riposte de feu (majeure)
 État: libre
 
 ------ Description (en) ------
