--- a/data/equipment/consumable-01-ugIxgGIkJh2aXE2N.htm
+++ b/data/equipment/consumable-01-ugIxgGIkJh2aXE2N.htm
@@ -1,5 +1,5 @@
 Name: Potion of Fire Retaliation (Minor)
-Nom: Potion de Riposte de feu (mineure)
+Nom: Potion de Riposte Enflammée (mineure)
 État: libre
 
 ------ Description (en) ------
@@ -8,5 +8,5 @@ Nom: Potion de Riposte de feu (mineure)
 <p>The aura deals 1 fire damage.</p>
 ------ Description (fr) ------
 <p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
-<p>Pendant 1 minute après avoir bu une potion de Riposte de feu, vous brillez d'une faible aura d'énergie de feu, et une créature qui vous touche (par exemple en effectuant une attaque à mains nues ou en utilisant un sort de contact) subit des dégâts de feu.</p>
+<p>Pendant 1 minute après avoir bu une potion de Riposte Enflammée, vous brillez d'une faible aura d'énergie de feu, et une créature qui vous touche (par exemple en effectuant une attaque à mains nues ou en utilisant un sort de contact) subit des dégâts de feu.</p>
 <p>L'aura inflige 1 dégât de feu.</p>
