--- a/data/equipment/consumable-18-TalLb1YlvXzutuPc.htm
+++ b/data/equipment/consumable-18-TalLb1YlvXzutuPc.htm
@@ -1,5 +1,5 @@
 Name: Potion of Fire Retaliation (Major)
-Nom: Potion de Riposte de feu (majeure)
+Nom: Potion de Riposte Enflammée (majeure)
 État: libre
 
 ------ Description (en) ------
@@ -8,5 +8,5 @@ Nom: Potion de Riposte de feu (majeure)
 <p>The aura deals 4d8 fire damage.</p>
 ------ Description (fr) ------
 <p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
-<p>Pendant 1 minute après avoir bu une potion de Riposte de feu, vous rayonnez d'une faible aura d'énergie de feu, et une créature qui vous touche (par exemple en effectuant une attaque à mains nues ou en utilisant un sort de contact) ou qui est adjacente à vous et vous frappe avec une arme de mêlée subit des dégâts de feu.</p>
+<p>Pendant 1 minute après avoir bu une potion de Riposte Enflammée, vous rayonnez d'une faible aura d'énergie de feu, et une créature qui vous touche (par exemple en effectuant une attaque à mains nues ou en utilisant un sort de contact) ou qui est adjacente à vous et vous frappe avec une arme de mêlée subit des dégâts de feu.</p>
 L'aura inflige 4d8 points de dégâts de feu.</p>
