--- a/data/equipment/consumable-18-JZZmDY1IJmKcdR2D.htm
+++ b/data/equipment/consumable-18-JZZmDY1IJmKcdR2D.htm
@@ -1,7 +1,6 @@
 Name: Vaccine (Major)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Vaccin (majeur)
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact</p>
@@ -9,7 +8,7 @@ Nom:
 <p><strong>Craft Requirements</strong> Creating a vaccine requires a sample of the disease in question.</p>
 <p><strong>Duration</strong> Permanent.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact</p>
-<p>Un vaccin confère à une créature l’immunité contre une souche spécifique de <em>maladie </em>d’un niveau égal ou inférieur à celui du vaccin, et un bonus d’article de +2 à tous les jets de sauvegarde contre les autres souches de la même maladie. Par exemple, un vaccin peut conférer une immunité contre la <em>fièvre des saletés</em> infligée par des <em>otyughs</em>, mais n'accorde qu'un bonus de +2 aux jets de sauvegarde contre la fièvre des saletés infligée par un <em>rat géant</em>.</p>
-<p><strong>Craft Requirements</strong> La création d'un vaccin nécessite un échantillon de la maladie en question.</p>
-<p><strong>Durée</strong> Permanent.</p>
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
+<p>Un vaccin confère à une créature l’immunité contre une souche spécifique d'une Maladie d’un niveau égal ou inférieur à celui du vaccin, et un bonus d’objet de +2 à tous les jets de sauvegarde contre les autres souches de la même maladie. Par exemple, un vaccin peut conférer une immunité contre la Fièvre des marais infligée par des Otyughs, mais n'accorde qu'un bonus de +2 aux jets de sauvegarde contre la fièvre des marais infligée par un rat géant.</p>
+<p><strong>Condition de fabrication</strong> La création d'un vaccin nécessite un échantillon de la maladie en question.</p>
+<p><strong>Durée</strong> permanent.</p>
