--- a/data/equipment/consumable-01-zExWH2EsY9STTORq.htm
+++ b/data/equipment/consumable-01-zExWH2EsY9STTORq.htm
@@ -1,13 +1,12 @@
 Name: Potion of Cold Retaliation (Minor)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Potion de Riposte glaciale (mineure)
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact</p>
 <p>For 1 minute after drinking a potion of cold retaliation, you glow with a faint aura of cold energy, and a creature that touches you (such as by making an unarmed attack or using a spell with a range of touch against you) takes cold damage.</p>
 <p>The aura deals 1 cold damage.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact</p>
-<p>Pendant 1 minute après avoir bu une potion de représailles froides, vous rayonnez d'une faible aura d'énergie froide, et une créature qui vous touche (par exemple en effectuant une attaque à mains nues ou en utilisant un sort à portée de toucher contre vous) subit des dégâts de froid.</p>
-L'aura inflige 1 point de dégâts de froid.</p>
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
+<p>Pendant 1 minute après avoir bu une potion de Riposte glaciale, vous rayonnez d'une faible aura d'énergie froide, et une créature qui vous touche (par exemple en effectuant une attaque à mains nues ou en utilisant un sort de contact) subit des dégâts de froid.</p>
+<p>L'aura inflige 1 point de dégâts de froid.</p>
