--- a/data/equipment/consumable-02-1TWHN8RbimPVXM0U.htm
+++ b/data/equipment/consumable-02-1TWHN8RbimPVXM0U.htm
@@ -1,13 +1,12 @@
 Name: Sinew-Shock Serum (Lesser)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Sérum de Choc-vigueur
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
 <hr />
 <p>This serum jolts the body to help shake off physical debilitations. When you drink this elixir, it attempts a counteract check with a <a class="inline-roll roll" data-mode="roll" data-flavor="" data-formula="1d20+6" title="1d20+6"><i class="fas fa-dice-d20"></i> 1d20+6</a> counteract modifier to remove the @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Clumsy} or @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Enfeebled} condition from a single source, using the source of that condition to determine the counteract level and DC.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">A</span> Interact</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <hr />
-<p>Ce sérum secoue le corps pour l'aider à se débarrasser des débilités physiques. Lorsque vous buvez cet élixir, il tente un test de contre-attaque avec un <a class="inline-roll roll" ; data-mode="roll" ; data-flavor="" ; data-formula=" ; 1d20+6" ; title="1d20+6"><i class="fas fa-dice-d20"></i> 1d20+6</a> contre-modificateur pour supprimer le @Compendium [pf2e. conditionitems.i3OJZU2nk64Df3xm]{Clumsy} ou @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Enfeebled} d'une seule source, en utilisant la source de cette condition pour déterminer le niveau de contre-attaque et le DC.</p>
+<p>Ce sérum secoue le corps pour l'aider à se débarrasser des débilités physiques. Lorsque vous buvez cet élixir, il tente un test de  de 1d20+6 pour contrer les effets de @Compendium [pf2e. conditionitems.i3OJZU2nk64Df3xm]{Maladroit} ou @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaibli} d'une seule source, en utilisant la source de cette condition pour déterminer le niveau de contre-effet et le DD.</p>
