--- a/data/equipment/consumable-02-1TWHN8RbimPVXM0U.htm
+++ b/data/equipment/consumable-02-1TWHN8RbimPVXM0U.htm
@@ -1,5 +1,5 @@
 Name: Sinew-Shock Serum (Lesser)
-Nom: Sérum de Choc-vigueur
+Nom: Sérum de Choc-vigueur (inférieur)
 État: libre
 
 ------ Description (en) ------
