--- a/data/equipment/consumable-18-Pnw4A7fhUhTS85Te.htm
+++ b/data/equipment/consumable-18-Pnw4A7fhUhTS85Te.htm
@@ -1,13 +1,13 @@
 Name: Focus Cathartic (Major)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Élixir de Concentration purificateur (majeur)
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
 <hr />
 <p>Focus briefly calms your neurons, helping ease mental effects. When you drink this elixir, the elixir attempts a counteract check with a [[/r 1d20+28]] counteract modifier to remove the @Compendium[pf2e.conditionitems.yblD8fOR1J8rDwEQ]{Confused} or @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupefied} condition from a single source, using the source of that condition to determine the counteract level and DC.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">A</span> Interact</p>
+p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <hr />
-<p>Focus calme brièvement vos neurones, aidant à atténuer les effets mentaux. Lorsque vous buvez cet élixir, celui-ci tente un test de contre-attaque avec un modificateur de contre-attaque [[/r 1d20+28]] pour supprimer le @Compendium[pf2e.conditionitems.yblD8fOR1J8rDwEQ]{Confusion} ou le @Compendium[pf2e. conditionitems.e1XGnhKNSQIm5IXg]{Stupefied} d'une source unique, en utilisant la source de cette condition pour déterminer le niveau de contre-attaque et le DC.</p>
+<p>Cet élixir de Concentration purificateur calme brièvement vos neurones, aidant à atténuer les effets mentaux. Lorsque vous buvez cet élixir, celui-ci tente un test pour contrer les effets, avec un modificateur de [[/r 1d20+28]] pour supprimer les états de  @Compendium[pf2e.conditionitems.yblD8fOR1J8rDwEQ]{Confusion} ou de @Compendium[pf2e. conditionitems.e1XGnhKNSQIm5IXg]{Stupefié} d'une source unique, en utilisant la source de cette condition pour déterminer le niveau de contre-attaque et le DD.</p>
+
