--- a/data/equipment/equipment-04-7JVgLiNTAs4clEW8.htm
+++ b/data/equipment/equipment-04-7JVgLiNTAs4clEW8.htm
@@ -1,7 +1,6 @@
 Name: Alchemist Goggles
 Nom: Lunettes d'alchimiste
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>These brass goggles are engraved with flame patterns and have thick, heavy lenses.</p>
@@ -14,4 +13,11 @@ Nom: Lunettes d'alchimiste
 <li>+1 item bonus to attack rolls with bombs</li>
 </ul>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Ces lunettes aux montures de bronze gravées de motifs de flamme sont dotées de verres lourds et épais. Une fois portées, elles vous confèrent un bonus d’objet de +1 aux tests d’Artisanat pour Fabriquer des objets alchimiques et un bonus d’ob‑ jet de +1 aux jets d’attaques avec des bombes alchimiques. Vous pouvez également ignorer les abris partiels quand vous eff&nbsp;</span></p>
+<p>Ces lunettes aux montures de bronze gravées de motifs de flamme sont dotées de verres lourds et épais.</p>
+<p>Une fois portées, elles vous confèrent un bonus d’objet de +1 aux tests d’Artisanat pour Fabriquer des objets alchimiques et un bonus d’objet de +1 aux jets d’attaques avec des bombes alchimiques. Vous pouvez également ignorer les abris partiels quand vous effectuez des Frappes avec des bombes alchimiques.</p>
+<hr />
+<p>effets automatiquement appliqués :</p>
+<ul>
+<li>bonus d'objet de +1 pour Fabriquer des objets alchimiques</li>
+<li>bonus d'objet de +1 pour les jets d'attaque avec les bombes</li>
+</ul>
