--- a/data/equipment/equipment-11-8XZqdeZStFAM4XnH.htm
+++ b/data/equipment/equipment-11-8XZqdeZStFAM4XnH.htm
@@ -13,7 +13,9 @@ Nom: Lunettes d'alchimiste (supérieures)
 <li>+2 item bonus to attack rolls with bombs</li>
 </ul>
 ------ Description (fr) ------
-<p>Ces lunettes aux montures de bronze gravées de motifs de flamme sont dotées de verres lourds et épais. Une fois portées, elles vous confèrent un bonus d’objet de +2 aux tests d’Artisanat pour Fabriquer des objets alchimiques et un bonus d’ob‑ jet de +1 aux jets d’attaques avec des bombes alchimiques. Vous pouvez également ignorer les abris partiels quand vous effectuez des Frappes avec des bombes alchimiques.</p>
+<p>Ces lunettes aux montures de bronze gravées de motifs de flamme sont dotées de verres lourds et épais.</p>
+<p>Une fois portées, elles vous confèrent un bonus d’objet de +2 aux tests d’Artisanat pour Fabriquer des objets alchimiques et un bonus d’objet de +2 aux jets d’attaques avec des bombes alchimiques.</p>
+<p>Vous pouvez également ignorer les abris partiels quand vous effectuez des Frappes avec des bombes alchimiques.</p>
 <hr />
 <p>effets automatiquement appliqués :</p>
 <ul>
