--- a/data/equipment/consumable-03-6P6lDnIxK7plyCEI.htm
+++ b/data/equipment/consumable-03-6P6lDnIxK7plyCEI.htm
@@ -1,11 +1,10 @@
 Name: Swamp Lily Quilt
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Couette de Lys
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">2</span> Interact</p>
 <p>This quilt is defined by its green lily-pad pattern, which is rare in Bellflower communications. The quilt is 10 feet square and infused with a reagent that activates when the quilt is laid out across soil or earth. One round after you lay out the quilt, the ground beneath it becomes soft and muddy, creating difficult terrain in the area where the quilt was. You can leave the quilt to maintain the difficult terrain indefinitely, but the affected ground begins to dry once you remove the quilt with an Interact action. The ground dries over the span of 1 hour, after which the ground returns to normal terrain. Placing the quilt on the ground uses up its infused reagents, and it becomes an ordinary quilt once removed from the ground.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">2</span> Interact</p>
-<p>Cette courtepointe est définie par son motif de nénuphars verts, qui est rare dans les communications de Bellflower. Le quilt fait 3 mètres de côté et est imprégné d'un réactif qui s'active lorsque le quilt est posé sur le sol ou la terre. Un tour après avoir étalé la couette, le sol en dessous devient mou et boueux, créant un terrain difficile dans la zone où se trouvait la couette. Vous pouvez laisser la courtepointe pour maintenir le terrain difficile indéfiniment, mais le sol affecté commence à sécher dès que vous retirez la courtepointe avec une action d'Interact. Le sol sèche en 1 heure, après quoi il redevient un terrain normal. En plaçant la courtepointe sur le sol, on utilise ses réactifs infusés, et elle devient une courtepointe ordinaire une fois retirée du sol.</p>
+<p><strong>Activate</strong> <span class="pf2-icon">2</span> Interagir</p>
+<p>Cette couette est singulière avec  son motif de lys verts, ce qui est rare dans les réseaux des Campanules. La couette fait 3 mètres de côté et est imprégné d'un réactif qui s'active lorsque la couette est posée sur le sol ou la terre. Un tour après avoir étalé la couette, le sol en dessous devient mou et boueux, créant un terrain difficile dans la zone couverte la couette. Vous pouvez laisser la couette pour maintenir le terrain difficile indéfiniment, mais le sol affecté commence à sécher dès que vous retirez la couette avec une action d'Interagir. Le sol sèche en 1 heure, après quoi il redevient un terrain normal. En plaçant la couette sur le sol, on utilise ses réactifs infusés, et une fois retirée du sol,  elle devient une couette ordinaire.</p>
