--- a/data/equipment/consumable-03-cImNgwDCqwa6Dil1.htm
+++ b/data/equipment/consumable-03-cImNgwDCqwa6Dil1.htm
@@ -1,7 +1,6 @@
 Name: Cold Iron Blanch (Lesser)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Enchaussement de Fer froid (inférieur)
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact</p>
@@ -10,8 +9,8 @@ Nom:
 <hr />
 <p>The blanch provides low-grade cold iron, so you can use it on a magic weapon up to 8th level, or ammunition for such a weapon. It lasts for 1 minute.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact</p>
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
 <hr />
-<p>Vous pouvez verser une fiole de ce liquide sombre sur une arme de mêlée, une arme jetée ou 10 munitions. Lorsque vous l'utilisez sur une arme de mêlée ou de jet, plutôt que sur des munitions, le blanchiment dure pendant la durée indiquée ou 10 frappes réussies, selon ce qui se produit en premier. Lorsque vous l'utilisez sur des munitions, le blanchiment est dépensé sur une munition donnée après son tir, qu'elle touche ou non. Un blanchiment de fer froid contient de petites quantités de feu d'alchimiste, il doit donc être utilisé en une seule fois ; une fiole ouverte s'enflamme pour faire fondre le fer froid sur l'arme et se consume rapidement. L'arme ou les munitions comptent comme du fer froid au lieu de leur matériau précieux normal (comme l'argent) pour tout dommage physique qu'elles infligent, le cas échéant.</p>
+<p>Vous pouvez verser une fiole de ce liquide sombre sur une arme de mêlée, une arme jetée ou 10 pièces de munitions. Lorsque vous l'utilisez sur une arme de mêlée ou de jet, plutôt que sur des munitions, l'enchaussement dure pendant la durée indiquée ou 10 frappes réussies, selon ce qui se produit en premier. Lorsque vous l'utilisez sur des munitions, l'enchaussement est dépensé sur une munition donnée après son tir, qu'elle touche ou non. Un enchasement de fer froid contient de petites quantités de feu d'alchimiste, il doit donc être utilisé en une seule fois. Une fiole ouverte s'enflamme pour faire fondre le fer froid sur l'arme et se consume rapidement. L'arme ou les munitions comptent comme du fer froid au lieu de leur matériau précieux normal (comme l'argent) pour tout dégâts physique qu'elles infligent, le cas échéant.</p>
 <hr />
-<p>Le blanchiment fournit du fer froid de qualité inférieure, de sorte que vous pouvez l'utiliser sur une arme magique jusqu'au 8e niveau, ou sur les munitions d'une telle arme. Il dure 1 minute.</p>
+<p>L'enchaussement fournit du fer froid de qualité inférieure, de sorte que vous pouvez l'utiliser sur une arme magique jusqu'au 8ème niveau, ou sur les munitions d'une telle arme. Il dure 1 minute.</p>
