--- a/data/equipment/consumable-08-WGbE7qAGw8O5yH07.htm
+++ b/data/equipment/consumable-08-WGbE7qAGw8O5yH07.htm
@@ -1,10 +1,9 @@
 Name: Vermin Repellent Agent (Moderate)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Agent répulsif de vermine (modéré)
+État: libre
 
 ------ Description (en) ------
-<p>Activate <span class="pf2-icon">3</span> Interact</p>
+<p>Activation <span class="pf2-icon">3</span> Interact</p>
 <hr />
 <p>This specialized cream serves as a repellent to stave off insects.</p>
 <p>The repellent also binds with a number of common insect venoms, dulling the potency and giving the wearer's immune system a boost to resist venoms.</p>
@@ -19,13 +18,15 @@ Nom:
 ------ Description (fr) ------
 <p>Activer <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">3</span> Interact</p>
 <hr />
-Cette crème spécialisée sert de répulsif pour éloigner les insectes ;
-Le répulsif se lie également à un certain nombre de venins d’insectes communs, en atténuant leur puissance et en renforçant le système immunitaire de la personne qui le porte pour qu’elle résiste aux venins ;
-<p>Une fois appliqué sur votre peau, le répulsif vous accorde un bonus de +2 aux jets de sauvegarde contre les poisons pendant 4 heures.</p>
-<p>@Compendium[pf2e.consumable-effects.Hnt3Trd7TiFICB06]{Effet : Agent répulsif pour vermine (modéré)}</p>
+<p>Activate <span class="pf2-icon">3</span> Interagir</p>
 <hr />
-<p>De plus, tous les arthropodes (insectes, araignées, scorpions, crabes et autres animaux invertébrés similaires) doivent tenter une sauvegarde de Volonté (DC 24) lorsqu’ils essaient de vous attaquer avec une frappe de mêlée, ou avec une attaque en essaim comme les morsures de l’essaim d’araignées. L'arthropode devient alors temporairement immunisé pendant 1 minute.</p>
+Cette crème spécialisée sert de répulsif pour éloigner les insectes. Le répulsif sert également à un certain nombre de venins d’insectes communs, en atténuant leur puissance et en renforçant le système immunitaire de la personne qui le porte pour qu’elle résiste aux venins.
+<p>Une fois appliqué sur votre peau, le répulsif vous accorde un bonus de +2 aux jets de sauvegarde de Force contre les poisons pendant 4 heures.</p>
+<p>@Compendium[pf2e.consumable-effects.OAN5Fj21PJPhIqRU]{Effet: Agent répulsif de vermine (modéré)}</p>
+<hr />
+<p>De plus, tous les arthropodes (insectes, araignées, scorpions, crabes et autres animaux invertébrés similaires) doivent tenter une sauvegarde de Volonté (DD 24) lorsqu’ils essaient de vous attaquer avec une frappe de mêlée, ou avec une attaque en nuée comme les morsures de la nuée d’araignées. L'arthropode devient alors temporairement immunisé pendant 1 minute.</p>
 <p><strong>Succès critique</strong> La créature peut agir normalement.</p>
-<p><strong>Succès</strong> La créature est @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Frightened} 1.</p>
 <p><strong>Échec</strong> La créature est effrayée 2.</p>
-<p><strong>Échec critique</strong> La créature est effrayée 2 et @Compendium[pf2e.conditionitems.sDPxOjQ9kx2RZE8D]{Fuite}.</p>
+<p><strong>Succès</strong> La créature est @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Éffrayé} 1.</p>
+<p><strong>Échec critique</strong> La créature est Éffrayée 2 et @Compendium[pf2e.conditionitems.sDPxOjQ9kx2RZE8D]{En Fuite}.</p>
+
