--- a/data/equipment/consumable-03-lgqyRmQ3GZbbxQsD.htm
+++ b/data/equipment/consumable-03-lgqyRmQ3GZbbxQsD.htm
@@ -1,7 +1,6 @@
 Name: Vermin Repellent Agent (Lesser)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Agent répulsif de vermine
+État: libre
 
 ------ Description (en) ------
 <p>Activate <span class="pf2-icon">3</span> Interact</p>
@@ -17,15 +16,14 @@ Nom:
 <p><strong>Failure</strong> The creature is frightened 2.</p>
 <p><strong>Critical Failure</strong> The creature is frightened 2 and @Compendium[pf2e.conditionitems.sDPxOjQ9kx2RZE8D]{Fleeing}.</p>
 ------ Description (fr) ------
-<p>Activer <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">3</span> Interact</p>
+<p>Activation <span class="pf2-icon">3</span> Interagir</p>
 <hr />
-Cette crème spécialisée sert de répulsif pour éloigner les insectes ;
-Le répulsif se lie également à un certain nombre de venins d’insectes communs, en atténuant leur puissance et en renforçant le système immunitaire de la personne qui le porte pour qu’elle résiste aux venins ;
+Cette crème spécialisée sert de répulsif pour éloigner les insectes. Le répulsif sert également à un certain nombre de venins d’insectes communs, en atténuant leur puissance et en renforçant le système immunitaire de la personne qui le porte pour qu’elle résiste aux venins.
 <p>Une fois appliqué sur votre peau, le répulsif vous accorde un bonus de +1 aux jets de sauvegarde de Force contre les poisons pendant 4 heures.</p>
-<p>@Compendium[pf2e.consumable-effects.OAN5Fj21PJPhIqRU]{Effet : Agent répulsif pour vermine (inférieur)}</p>
+<p>@Compendium[pf2e.consumable-effects.OAN5Fj21PJPhIqRU]{Effet: Agent répulsif de vermine (inférieur)}</p>
 <hr />
-<p>De plus, tous les arthropodes (insectes, araignées, scorpions, crabes et autres animaux invertébrés similaires) doivent tenter une sauvegarde de Volonté (DC 17) lorsqu’ils essaient de vous attaquer avec une frappe de mêlée, ou avec une attaque en essaim comme les morsures de l’essaim d’araignées. L'arthropode devient alors temporairement immunisé pendant 1 minute.</p>
+<p>De plus, tous les arthropodes (insectes, araignées, scorpions, crabes et autres animaux invertébrés similaires) doivent tenter une sauvegarde de Volonté (DD 17) lorsqu’ils essaient de vous attaquer avec une frappe de mêlée, ou avec une attaque en nuée comme les morsures de la nuée d’araignées. L'arthropode devient alors temporairement immunisé pendant 1 minute.</p>
 <p><strong>Succès critique</strong> La créature peut agir normalement.</p>
-<p><strong>Succès</strong> La créature est @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Frightened} 1.</p>
 <p><strong>Échec</strong> La créature est effrayée 2.</p>
-<p><strong>Échec critique</strong> La créature est effrayée 2 et @Compendium[pf2e.conditionitems.sDPxOjQ9kx2RZE8D]{Fuite}.</p>
+<p><strong>Succès</strong> La créature est @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Éffrayé} 1.</p>
+<p><strong>Échec critique</strong> La créature est Éffrayée 2 et @Compendium[pf2e.conditionitems.sDPxOjQ9kx2RZE8D]{En Fuite}.</p>
