--- a/data/equipment/consumable-08-KgF3nPT2tEskXqSS.htm
+++ b/data/equipment/consumable-08-KgF3nPT2tEskXqSS.htm
@@ -1,7 +1,6 @@
 Name: Metalmist Sphere (Moderate)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Sphère de Brume-métal (modéré)
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
@@ -10,8 +9,8 @@ Nom:
 <hr />
 <p>The radius of the burst is 10 feet.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">A</span> Interact</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <hr />
-<p>Cette sphère contient de petits fragments de pierres de tonnerre au sein d'une suspension colloïdale d'un métal précieux. Lorsque vous faites tourner la sphère, elle crée une brume opaque en rafale centrée sur un coin de votre espace. Les créatures situées dans cette zone sont dissimulées, et toutes les autres créatures leur sont dissimulées. Toute créature ayant une faiblesse au métal précieux qui commence son tour dans la brume subit des dégâts égaux à sa faiblesse. La brume dure 1 minute ou jusqu'à ce qu'elle soit dispersée par un vent fort. La plupart des sphères de brume métallique sont remplies d'argent ou de fer froid, mais des versions plus coûteuses contenant d'autres ingrédients peuvent exister.</p>
+<p>Cette sphère contient de petits fragments de pierres de tonnerre au sein d'une suspension colloïdale d'un métal précieux. Lorsque vous faites tourner la sphère, elle crée une brume opaque en rafale centrée sur un coin de votre espace. Les créatures situées dans cette zone sont dissimulées, et toutes les autres créatures leur sont dissimulées. Toute créature ayant une faiblesse au métal précieux qui commence son tour dans la brume subit des dégâts égaux à sa faiblesse. La brume dure 1 minute ou jusqu'à ce qu'elle soit dispersée par un vent fort. La plupart des sphères de Brume-métal sont remplies d'argent ou de fer froid, mais des versions plus coûteuses contenant d'autres ingrédients peuvent exister.</p>
 <hr />
-<p>Le rayon de l'éclatement est de 10 pieds.</p>
+<p>Le rayon de l'éclatement est de 3 mètres. </p>
