--- a/data/equipment/consumable-08-z3IG6t2o0zsfP2XQ.htm
+++ b/data/equipment/consumable-08-z3IG6t2o0zsfP2XQ.htm
@@ -1,7 +1,6 @@
 Name: Hype
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Excitation
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact</p>
@@ -12,10 +11,10 @@ Nom:
 <p><strong>Stage 2</strong> stupefied 2 (1 round);</p>
 <p><strong>Stage 3</strong> drained 2 and stupefied 2 (1 round)</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact</p>
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
 <p>Un supplément d'adrénaline synthétique qui augmente la conscience et le temps de réaction.</p>
-<p><strong>Jet de sauvegarde</strong> DC 25 Fortitude;</p>
+<p><strong>Jet de sauvegarde</strong> DD 25 Fortitude;</p>
 <p><strong>Durée maximale</strong> 1 minute;</p>
-<p><strong>Stade 1</strong> accéléré et peut utiliser l'action supplémentaire pour faire un pas ou une foulée (1 round);</p>
-<p><strong>Stade 2</strong> stupeur 2 (1 round);</p>
-<p><strong>Stade 3</strong> drainé 2 et stupéfié 2 (1 round)</p>
+<p><strong>Stade 1</strong> @Compendium[pf2e.conditionitems.nlCjDvLMf2EkV2dl]{Accéléré} et peut utiliser l'action supplémentaire pour @Compendium[pf2e.actionspf2e.UHpkTuCtyaPqiCAB]{Faire un pas} ou  @Compendium[pf2e.actionspf2e.Bcxarzksqt9ezrs6]{Marcher rapidement} (1 round);</p>
+<p><strong>Stade 2</strong> @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupéfié} 2 (1 round);</p>
+<p><strong>Stade 3</strong> @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainé} 2 et stupéfié 2 (1 round)</p>
